--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,6 @@
 <Project>
     <PropertyGroup>
-        <HotChocolateVersion>12.0.0-preview.34</HotChocolateVersion>
+        <HotChocolateVersion>12.0.0-rc.9</HotChocolateVersion>
     </PropertyGroup>
 
     <PropertyGroup>
